--- a/styles/style.css
+++ b/styles/style.css
@@ -16,16 +16,25 @@ justify-content: space-between;
 background-color: rgb(16, 16, 85);
 }
 
+.navigation{
+    width: 56%;
+}
+
 .logo{
     margin-left: 2rem;
+    width: 15%;
 }
 
 .logo img{
     width: 250px;
 }
 
+.logo img:hover{
+    transform: scale(1.2);
+    transition: 2s;
+}
+
 nav{ 
-    margin-right: 3rem;
     display: flex;
     gap: 2rem;
     align-items: center;
@@ -64,15 +73,32 @@ nav a{
     align-items: center;
 }
 
+.flecha-izq, .flecha-der{
+    padding: 1rem;
+}
+
+.flecha-izq img:hover, .flecha-der img:hover{
+    transform: scale(1.1);
+    transition: .1s;
+}
+
 .flecha-izq img, .flecha-der img{
-    width: 100px;
-    height: 100px;
+    width: 60px;
+    height: 60px;
+    background-color: rgba(217,3,104,255);
+    border-radius: 50%;
 }
 
 .titulo-pagina{
     font-size: 3rem;
     color: rgba(217,3,104,255);
 }
+
+nav a:hover{
+    color: rgba(217,3,104,255);
+    background-color: black;
+}
+
 
 /* --------MAIN SECTION------- */
 
@@ -117,6 +143,7 @@ nav a{
 .buscador input{
     height: 2.3rem;
     width: 60%;
+    font-size: 1.8rem;
 }
 
 .search-button{
@@ -139,7 +166,7 @@ nav a{
 }
 
 .card{
-    background-color: rgb(135, 197, 252);
+    background-color: rgb(17, 17, 164);
     width: 300px;
     height: 350px;
     display: flex;
@@ -183,10 +210,24 @@ nav a{
     font-size: 1.2rem;
 }
 
-.pie-de-card button{
-    width: 5rem;
+.pie-de-card .button{
+    width: 6rem;
     border: 1px solid black;
-    box-shadow: -5px -4px grey;
+    background-color: white;
+    border-radius: 8px;
+    box-shadow: -5px -4px 5px rgb(16, 16, 85);
+}
+
+.pie-de-card a{
+    text-decoration: none;
+    text-align: center;
+    color: black;
+    font-size: 1rem;
+}
+
+.pie-de-card a:hover{
+    background-color: black;
+    color: rgba(217,3,104,255);
 }
 
 /* ----------CONTACT INDEX--------- */
@@ -284,6 +325,67 @@ tbody td{
     color: rgba(217,3,104,255);
 }
 
+/* -------DETAILS---------- */
+
+.general-container-details{
+    background-image: url(../assets/cool-background.png);
+    min-height: 78vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.container-cards-details{
+    width: 100%;
+    height: 600px;
+    padding: 2rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.card-details{
+    background-color: rgb(17, 17, 164);
+    width: 80%;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    border-radius: 10px;
+}
+
+.img-card{
+    width: 50%;
+    height: 85%;
+    display: flex;
+    justify-content: center;
+}
+
+.img-card img{
+    border-radius: 10px;
+    height: 100%;
+    width: 90%;
+    object-fit: cover;
+    box-shadow: -15px -15px 10px rgb(16, 16, 85);
+}
+
+.titulo-card-details{
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+    align-items: center;
+} 
+
+.titulo-card-details h3{
+    font-size: 6rem;
+}
+
+.titulo-card-details p{
+    font-size: 3rem;
+}
+
+
 /* -----FOOTER-------- */
 
 .container-footer{
@@ -309,6 +411,11 @@ tbody td{
     border-radius: 50%;
 }
 
+.instagram img:hover, .facebook img:hover, .whatsapp img:hover{
+    transform: scale(1.3);
+    transition: .2s;
+}
+
 .texto-extra{
     color: rgba(217,3,104,255);
     width: 50%;
@@ -318,4 +425,322 @@ tbody td{
 .texto-extra p{
     text-align: end;
     font-size: 3rem;
+}
+
+/* MEDIAQUERIES 1620 - 1345  */
+
+@media screen and (max-width: 1620px) {
+
+    .seleccionador fieldset label{
+        font-size: 1.3rem;
+    }
+}
+
+@media screen and (max-width: 1345px) {
+
+    .filtrador{
+        flex-direction: column;
+    }
+    .seleccionador{
+        width: 100%;
+    }
+    
+    .seleccionador fieldset label{
+        font-size: 1.7rem;
+    }
+    
+    .buscador{
+        width: 100%;
+    }
+    
+}
+
+@media screen and (max-width: 1255px) {
+    .container-header{
+        justify-content: center;
+    }
+    
+    .logo img{
+        display: none;
+    }
+
+    .navigation{
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    .menu-carousel{
+        height: 4vh;
+    }
+
+    .flecha-izq img, .flecha-der img{
+        width: 30px;
+        height: 30px;
+    }
+
+    .titulo-pagina{
+        font-size: 1.5rem;
+    }
+
+    .general-container{
+    min-height: 74vh;
+    }
+
+    nav a{
+        width: 7rem;
+        height: 3rem;
+        font-size: 1.2rem;
+    }
+
+    .container-cards{
+        gap: 4rem;
+    }
+
+    
+    .container-cards-details{
+        height: 700px;
+    }
+    
+    .card-details{
+        width: 95%;
+    }
+    
+    .img-card{
+        width: 50%;
+    }
+    
+    .img-card img{
+        height: 100%;
+    }
+    
+    .titulo-card-details h3{
+        font-size: 5rem;
+    }
+    
+    .titulo-card-details p{
+        font-size: 2.2rem;
+    }
+
+
+}
+
+@media screen and (max-width: 810px) {
+    nav{
+        gap: .2rem;
+    }
+    
+    nav a{
+        width: 5rem;
+        height: 2.2rem;
+        font-size: .9rem;
+    }
+    
+    .seleccionador fieldset label{
+        font-size: 1.1rem;
+    }
+    
+    .card{
+        width: 90%;
+        height: 550px;
+        justify-content: space-evenly;
+    }
+    
+    .titulo-card h3{
+        font-size: 4.7rem;
+    }
+    
+    .titulo-card p{
+        font-size: 2.7rem;
+    }
+    
+    .pie-de-card p{
+        font-size: 1.8rem;
+    }
+    
+    .pie-de-card .button{
+        width: 10rem;
+    }
+    
+    .pie-de-card a{
+        font-size: 2rem;
+    }
+
+    .texto-extra{
+        padding-right: 1rem;
+    }
+
+    .texto-extra p{
+        font-size: 1.7rem;
+    }
+    
+    .name, .email, .mensagge{
+        width: 90%;
+    }
+
+    .name label, .email label, .mensagge label{
+        color: rgba(217,3,104,255);
+        font-size: 3rem;
+        height: 20%;
+    }
+    
+    .name fieldset, .email fieldset{
+        width: 100%;
+        height: 10rem;
+        border: none;
+    }
+    
+    .mensagge fieldset{
+        width: 100%;
+        height: 18rem;
+        border: none;
+    }
+    
+    .mensagge input{
+        width: 100%;
+        height: 80%;
+        font-size: 3rem;
+        text-align: left;
+    }
+    
+    .name input, .email input{
+        width: 100%;
+        height: 60%;
+        font-size: 3rem;
+    }
+    
+    .submit-button{
+        width: 90%;
+        padding-left: 0;
+    }
+    
+    .submit-button input{
+        height: 2.5rem;
+        width: 10rem;
+        font-size: 2rem;
+    }
+ 
+    thead{
+        font-size: 1.9rem;
+    }
+    
+    tbody{
+        font-size: 1rem;
+    }
+
+}
+
+@media screen and (max-width: 612px) {
+    nav{
+        flex-wrap: wrap;
+    }
+
+    .navigation{
+        align-items: center;
+        justify-content: center;
+    }
+
+    .titulo-pagina{
+        font-size: 1.2rem;
+    }
+
+    .seleccionador fieldset{
+        flex-direction: column;
+        gap: .1rem;
+    }
+
+    .card{
+        width: 100%;
+        height: 400px;
+    }
+    
+    .titulo-card h3{
+        font-size: 3.1rem;
+    }
+    
+    .titulo-card p{
+        font-size: 1.7rem;
+    }
+    
+    .pie-de-card p{
+        font-size: 1.2rem;
+    }
+    
+    .pie-de-card .button{
+        width: 5rem;
+    }
+    
+    .pie-de-card a{
+        font-size: 1.1rem;
+    }
+
+    .container-footer{
+        display: flex;
+        flex-direction: column;
+    }
+
+    .social-media{
+        width: 100%;
+        align-items: center;
+        justify-content: center;
+        gap: .2rem;
+        padding-left: 0;
+        padding-top: 1rem;
+    }
+
+    .instagram img, .facebook img, .whatsapp img{
+        width: 45px;
+        height: 45px;
+    }
+
+    .texto-extra{
+        width: 100%;
+        padding-right: 0;
+    }
+    
+    .texto-extra p{
+        text-align: center;
+        font-size: 1.5rem;
+    }
+    
+    .container-cards-details{
+        padding: 0;
+    }
+    
+    .card-details{
+        width: 90%;
+        flex-direction: column;
+    }
+    
+    .img-card{
+        width: 90%;
+        height: 50%;
+        align-items: center;
+    }
+    
+    .img-card img{
+        border-radius: 10px;
+        box-shadow: -15px -15px 10px rgb(16, 16, 85);
+        height: 90%;
+        width: 90%;
+    }
+    
+    .titulo-card-details{
+        width: 100%;
+        height: 50%;
+        align-items: center;
+        justify-content: center;
+    } 
+    
+    .titulo-card-details h3{
+        font-size: 3.5rem;
+    }
+    
+    .titulo-card-details p{
+        font-size: 2rem;
+    }
+    
+
 }
