--- a/styles/style.css
+++ b/styles/style.css
@@ -56,6 +56,11 @@ nav a{
     align-items: center;
 }
 
+nav a:hover{
+    color: rgba(217,3,104,255);
+    background-color: black;
+}
+
 .active {
     background-color: black;
     color: rgba(217,3,104,255);
@@ -94,10 +99,6 @@ nav a{
     color: rgba(217,3,104,255);
 }
 
-nav a:hover{
-    color: rgba(217,3,104,255);
-    background-color: black;
-}
 
 
 /* --------MAIN SECTION------- */
@@ -168,12 +169,18 @@ nav a:hover{
 .card{
     background-color: rgb(17, 17, 164);
     width: 300px;
-    height: 350px;
+    height: 450px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
     border-radius: 10px;
+}
+
+.card:hover{
+    transform: scale(1.2);
+    transition: .5s;
+    transition: all .4s ease-in-out;
 }
 
 .card img{
@@ -192,11 +199,13 @@ nav a:hover{
 }
 
 .titulo-card h3{
-    font-size: 2.2rem;
+    font-size: 2rem;
+    color: white;
 }
 
 .titulo-card p{
-    font-size: 1.4rem;
+    font-size: 1.2rem;
+    color: white;
 }
 
 .pie-de-card{
@@ -208,6 +217,7 @@ nav a:hover{
 
 .pie-de-card p{
     font-size: 1.2rem;
+    color: white;
 }
 
 .pie-de-card .button{
@@ -220,6 +230,7 @@ nav a:hover{
 
 .pie-de-card a{
     text-decoration: none;
+    font-weight: 600;
     text-align: center;
     color: black;
     font-size: 1rem;
