--- a/styles/style.css
+++ b/styles/style.css
@@ -131,6 +131,8 @@ nav a:hover{
 
 .seleccionador fieldset label{
     font-size: 1.7rem;
+    display: flex;
+    gap: .8rem;
 }
 
 .buscador{
@@ -663,7 +665,11 @@ tbody td{
 
     .seleccionador fieldset{
         flex-direction: column;
-        gap: .1rem;
+        gap: .4rem;
+    }
+
+    .seleccionador fieldset label{
+        font-size: 1.7rem;
     }
 
     .card{
