cambie el fondo de los titulos de la tabla de stats

--- a/styles/style.css
+++ b/styles/style.css
@@ -355,7 +355,8 @@ tbody{
 .table-title>td{
     text-align: center;
     font-weight: bold;
-    text-shadow: 2px 2px black ;
+    text-shadow: 2px 2px black;
+    background-color: rgb(12, 12, 117);
 }
 
 tbody td{
